--- a/battleships_game/src/styles/app.css
+++ b/battleships_game/src/styles/app.css
@@ -1,8 +1,14 @@
+body{
+  margin:0;
+  padding:0;
+}
+
 .grid-container{
- display:flex;
- height: 80vh;
- margin-top:10vh;
- flex-direction: column;
- align-items: center;
- justify-content: space-between; 
+  display:flex;
+  height: 80vh;
+  width: 90vw; 
+  margin-top:5vh;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between; 
 }
