--- a/battleships_game/src/components/login-page/LoginStyles.css
+++ b/battleships_game/src/components/login-page/LoginStyles.css
@@ -2,6 +2,15 @@
     margin: 200px 0px 100px 0px;
 }
 
-.buttonWidth {
-    width: 150px;
+.guestButtonWidth {
+    width: 120px;
+    font-size: 75%;
+    margin-top: 5px;
+}
+
+.googleIcon {
+    height: 20%;
+    width: 20%;
+    margin-right: 5px;
+    margin-left: 0px;
 }
