--- a/battleships_game/src/components/main-menu/LoginStyles.css
+++ b/battleships_game/src/components/main-menu/LoginStyles.css
@@ -1,20 +1,26 @@
-.title {
-    margin: 150px 0px 150px 0px;
-}
-
 .guestButtonWidth {
-    width: 120px;
+    width: 12rem;
     font-size: 75%;
-    margin-top: 5px;
+    margin-top: 1rem;
 }
 
 .googleIcon {
     height: 20%;
     width: 20%;
-    margin-right: 5px;
-    margin-left: 0px;
+    margin-right: 0.1rem;
+    margin-left: 0rem;
 }
 
 .googleButton {
-    margin-top: 55px;
+    margin-top: 7.5rem;
+}
+
+.menuButton {
+    margin: 0.75rem 0px;
+    padding: 0.75rem 0px;
+    width: 25rem;
+}
+
+.title {
+    margin: 13rem 0px 13rem 0px;
 }
