--- a/battleships_game/src/components/stats/player-stats/PlayerStats.css
+++ b/battleships_game/src/components/stats/player-stats/PlayerStats.css
@@ -1,3 +1,13 @@
 .title {
     margin: 13rem 0px 13rem 0px;
 }
+
+table, tr, th {
+    border: solid black 1px;
+    padding: 0.5rem;
+}
+
+table {
+    margin: auto;
+    width: 50%; 
+}
